# prosjekter

./: .gitignore
Api/Historie generator/: backend.js  index.html  py_api.py  pytest.py
python/Magic kort gjenkjenner/: Tst.py  ai_test.py  card identifier.py  get data.py  input_image_processor.py  pyproject.toml  requirements.txt
