[project]
name = "Test"
version = "0.1.0"
description = "poetry shell"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "meg"}
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "numpy (>=2.2,<3.0)",
    "scrython (>=1.11.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
